# corosync-qdevice

./: .gitignore  LICENSE  Makefile.am  README  configure.ac  corosync-qdevice.pc.in  corosync-qdevice.spec.in
build-aux/: release.mk
init/: Makefile.am  corosync-qdevice.in  corosync-qdevice.service.in  corosync-qnetd.service.in  corosync-qnetd.sysusers.conf.example
man/: Makefile.am  corosync-qdevice-net-certutil.8  corosync-qdevice-tool.8  corosync-qdevice.8  corosync-qnetd-tool.8  corosync-qnetd.8
qdevices/: Makefile.am  corosync-qdevice-net-certutil.sh  corosync-qdevice-tool.c  corosync-qdevice.c  corosync-qnetd-certutil.sh  corosync-qnetd-tool.c  corosync-qnetd.c  log-common.c  msg.c  msg.h  msgio.c  pr-poll-loop.c  pr-poll-loop.h  process-list.c  qdevice-advanced-settings.c  qdevice-advanced-settings.h  qdevice-cmap.c  qdevice-cmap.h  qdevice-heuristics-exec-result.c  qdevice-heuristics-instance.h  qdevice-heuristics-result-notifier.c  qdevice-heuristics-result-notifier.h  qdevice-heuristics-worker-cmd.c  qdevice-heuristics-worker.c  qdevice-heuristics.c  qdevice-heuristics.h  qdevice-instance.c  qdevice-instance.h  qdevice-ipc-cmd.c  qdevice-ipc.c  qdevice-ipc.h  qdevice-model-net.c  qdevice-model-net.h  qdevice-model.c  qdevice-model.h  qdevice-net-algorithm.c  qdevice-net-cast-vote-timer.c  qdevice-net-disconnect-reason.h  qdevice-net-echo-request-timer.c  qdevice-net-heuristics.c  (+58 more)
